<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contact_frag_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/contact_scrollview"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/contact_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:orientation="vertical"
            android:clickable="true"
            android:focusableInTouchMode="true">
            <!-- Photo -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <ImageView
                    android:id="@+id/contact_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_photo"
                    android:contentDescription="@string/contact_photo"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/contact_change_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contact_change_photo"
                    android:layout_margin="6dp"
                    android:layout_gravity="bottom|end"
                    android:src="@drawable/fab_edit"
                    android:backgroundTint="@color/white"/>
            </FrameLayout>
            <!-- Infos -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <!-- Name -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/contact_imageview_user"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/small_user"
                        android:contentDescription="@string/contact_cat_user"
                        android:layout_gravity="center|start"/>
                    <EditText
                        android:id= "@+id/contact_input_name"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:autofillHints="givenName"
                        android:hint="@string/contact_name"
                        android:inputType="text"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                </LinearLayout>
                <!-- Phone -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/contact_phone"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/small_phone"
                        android:contentDescription="@string/contact_cat_phone"
                        android:layout_gravity="center|start"/>
                    <EditText
                        android:id="@+id/contact_input_phone"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:autofillHints="phone"
                        android:hint="@string/contact_phone"
                        android:inputType="phone"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                </LinearLayout>
                <!-- Email -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/contact_email"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/small_email"
                        android:contentDescription="@string/contact_cat_email"
                        android:layout_gravity="center|start"/>
                    <EditText
                        android:id="@+id/contact_input_email"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:autofillHints="emailAddress"
                        android:hint="@string/contact_email"
                        android:inputType="textEmailAddress"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                </LinearLayout>
                <!-- Address -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/contact_address"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/small_position"
                        android:contentDescription="@string/contact_cat_address"
                        android:layout_gravity="center|start"/>
                    <EditText
                        android:id="@+id/contact_input_street"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:autofillHints="addressLine1"
                        android:hint="@string/contact_street"
                        android:inputType="text"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/contact_input_city"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="50dp"
                        android:autofillHints="addressLine1"
                        android:hint="@string/contact_city"
                        android:inputType="text"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/contact_input_zip"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="50dp"
                        android:autofillHints="postalCode"
                        android:hint="@string/contact_zip"
                        android:inputType="number"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                </LinearLayout>
                <!-- Notes -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/contact_notes"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/small_notes"
                        android:contentDescription="@string/contact_cat_notes"
                        android:layout_gravity="center|start"/>
                    <EditText
                        android:id="@+id/contact_input_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:autofillHints="text"
                        android:hint="@string/contact_notes"
                        android:inputType="textMultiLine"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>