<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sms_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical">
    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        android:background="@color/white"
        android:elevation="6dp">
        <!-- Photo -->
        <ImageView
            android:id="@+id/sms_header_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_circle"
            android:scaleType="centerCrop"
            android:contentDescription="@string/sms_contact_photo"/>
        <!-- Text -->
        <LinearLayout
            android:id="@+id/sms_header_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
            <TextView
                android:id="@+id/sms_header_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/sms_header_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#505050"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/sms_list_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:background="@color/backgroundGray">
        <LinearLayout
            android:id="@+id/sms_list_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/backgroundGray"/>
    </ScrollView>
    <!-- Footer -->
    <LinearLayout
        android:id="@+id/sms_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <EditText
            android:id="@+id/sms_footer_et"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:inputType="text"
            android:hint="@string/sms_write"
            android:autofillHints="text"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/sms_footer_send"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="53dp"
            android:padding="8dp"
            android:contentDescription="@string/sms_send"
            android:src="@drawable/send"/>
    </LinearLayout>
</LinearLayout>